# network-byte-order

./: README.md  network-byte-order.cabal
.github/workflows/: haskell.yml
Network/: ByteOrder.hs
test/: doctests.hs
