cabal-version: >=1.10
name:          network-byte-order
version:       0.1.6
license:       BSD3
license-file:  LICENSE
maintainer:    kazu@iij.ad.jp
author:        Kazu Yamamoto
synopsis:      Network byte order utilities
description:   Peek and poke functions for network byte order.
category:      Network
build-type:    Simple

source-repository head
    type:     git
    location: git://github.com/kazu-yamamoto/network-byte-order.git

library
    exposed-modules:    Network.ByteOrder
    default-language:   Haskell2010
    default-extensions: Strict StrictData
    ghc-options:        -Wall
    build-depends:
        base >=4.9 && <5,
        bytestring

test-suite doctest
    type:               exitcode-stdio-1.0
    main-is:            doctests.hs
    hs-source-dirs:     test
    default-language:   Haskell2010
    default-extensions: Strict StrictData
    ghc-options:        -Wall
    build-depends:
        base >=4.9 && <5,
        bytestring,
        doctest
